Improve input placeholders in form section
Updated input placeholders for better clarity.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <h1>🎉 Birthday Gift 🎉</h1>
     <p>Isi data kamu terlebih dahulu</p>
 
-    <input type="text" id="name" placeholder="Nama">
-    <input type="date" id="birth">
+    <input type="text" id="name" placeholder="isi nama kamuu">
+    <input type="date" id="birth" placeholder="kamu kapan lahirnyaa">
     
     <select id="gender">
         <option value="">Jenis Kelamin</option>
