Add typing effect class to result text paragraph

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <div class="card hidden scale-in" id="resultSection">
     <h2>HAPPY BIRTHDAY 🎂</h2>
     <h1 id="resultName"></h1>
-    <p id="resultText"></p>
+<p id="resultText" class="typing-text"></p>
     <button onclick="reset()">Ulangi</button>
 </div>
 
