Update audio source in index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <canvas id="confetti"></canvas>
 
 <!-- MUSIC -->
-<audio id="music" src="happy-birthday-220024.mp3"></audio>
+<audio id="music" src="WhatsApp Audio 2025-12-30 at 07.43.15.mpeg"></audio>
 
 <script src="script.js"></script>
 </body>
