Update greeting to include user name and add button

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
 <!-- SECTION 1 -->
 <div class="section" id="sec1">
-    <h1 class="fade">🎉 Haii Kamu 🎉</h1>
+  <h1 class="fade">🎉 Haii <span id="userName"></span> 🎉</h1>
+     <button onclick="showBirthday()">Selanjutnya</button>
 </div>
 
 <!-- SECTION 2 -->
