Add canvas element for confetti effect

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <canvas id="confetti"></canvas>
 
 <!-- BALLOON DECOR -->
 <div class="balloon left"></div>
@@ -32,7 +33,6 @@
 <!-- SECTION 1 -->
 <div class="section" id="sec1">
   <h1 class="fade">🎉 Haii <span id="userName"></span> 🎉</h1>
-     <button onclick="showBirthday()">Selanjutnya</button>
 </div>
 
 <!-- SECTION 2 -->
