--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
     <p>Semoga harapanmu terkabul ✨</p>
 </div>
 
+<!-- MUSIC --> 
+<audio id="music" src="WhatsApp Audio 2025-12-30 at 07.43.15.mpeg"></audio>
+    
 <script src="script.js"></script>
 </body>
 </html>
