Remove emoji from birthday gift header

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- FORM (SECTION 0) -->
     <div class="section active" id="formSection">
       <div class="card fade-in">
-        <h1>🎉 Birthday Gift 🎉</h1>
+        <h1>Birthday Gift 🎉</h1>
         <p>Isi data kamu terlebih dahulu</p>
 
         <input type="text" id="name" placeholder="isi nama kamuu">
