--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Birthday Gift</title>
+
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -13,11 +15,14 @@
 
   <div class="app">
 
-    <!-- BALLOON DECOR -->
+    <!-- BALLOON -->
     <div class="balloon left"></div>
     <div class="balloon right"></div>
 
-    <!-- FORM (SECTION 0) -->
+    <!-- TAP HINT (GLOBAL, SATU SAJA) -->
+    <div id="tapHint">Ketuk layar untuk lanjut</div>
+
+    <!-- FORM -->
     <div class="section active" id="formSection">
       <div class="card fade-in">
         <h1>Birthday Gift 🎉</h1>
